--- a/supabase-cards/src/App.css
+++ b/supabase-cards/src/App.css
@@ -1,3 +1,16 @@
+table{
+  border-collapse: collapse;
+  max-width: 900px;
+  width:100%;
+  margin: 2rem auto;
+}
+
+table th, table td{
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -9,7 +22,6 @@
   height: 6em;
   padding: 1.5em;
   will-change: filter;
-  transition: filter 300ms;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
