all i did was add components that dont work yet

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,7 @@
 .navbar {
+    float: none;
+    width: 100%;
+    text-align: left;
     display: flex;
     justify-content: space-between;
     align-items: center;
