--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #ddd;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -20,8 +21,17 @@ table th, table td{
   text-align: left;
 }
 
-
 #root {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: center;
+}
+.dark-mode {
+  background-color: #2c3e50;
+}
+
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -38,30 +48,9 @@ table th, table td{
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 
 @media screen and (max-width: 480px) {
   .switch {
