--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@ table th, table td{
   background-color: #2c3e50;
 }
 
+.text-stroke-blue-500 {
+  --tw-text-stroke-opacity: 1;
+  -webkit-text-stroke-color: rgba(59, 130, 246, var(--tw-text-stroke-opacity));
+}
 
 /* #root {
   max-width: 1280px;
